objects/ssot__SMSPublication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationSecondsQty__c</fullName>
        <label>Duration Seconds Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementAssetContentId__c</fullName>
        <label>Engagement Asset Content</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementAssetId__c</fullName>
        <label>Engagement Asset</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementPublicationTypeId__c</fullName>
        <label>Engagement Publication Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationNbr__c</fullName>
        <label>Engagement Publication Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationStatusId__c</fullName>
        <label>Engagement Publication Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementTopicGroupId__c</fullName>
        <label>Engagement Topic Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorMessageTxt__c</fullName>
        <label>Error Message Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FailedRecordCt__c</fullName>
        <label>Failed Record Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>SMS Publication Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEngagementPublicationId__c</fullName>
        <label>Parent Engagement Publication</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationAttemptsNbr__c</fullName>
        <label>Publication Attempts Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationStatusDt__c</fullName>
        <label>Publication Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SendClassificationId__c</fullName>
        <label>Send Classification</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuccessfulRecordCt__c</fullName>
        <label>Successful Record Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPublicationItemsCt__c</fullName>
        <label>Total Publication Items Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761168045_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationTemplate_Id_map_SMS_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationTemplate_Id_map_SMS_rel</relationshipLabel>
        <relationshipName>rel_1697761168045_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761171012_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailPublication_Id_map_SMSPublicati_rel</label>
        <referenceTo>ssot__EmailPublication__dlm</referenceTo>
        <relationshipLabel>EmailPublication_Id_map_SMSPublicati_rel</relationshipLabel>
        <relationshipName>rel_1697761171012_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761172033_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailTemplate_Id_map_SMSPublication__rel</label>
        <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
        <relationshipLabel>EmailTemplate_Id_map_SMSPublication__rel</relationshipLabel>
        <relationshipName>rel_1697761172033_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>